--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,9 @@
   "description": "gRPC Game Client",
   "devDependencies": {
     "google-protobuf": "~3.21.4",
+    "html-webpack-plugin": "^5.6.3",
     "webpack": "~5.82.1",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
