replace webgl by webgpu and fix lights and shadows

--- a/web/package.json
+++ b/web/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "description": "gRPC Game Client",
   "devDependencies": {
+    "@webgpu/types": "^0.1.64",
+    "copy-webpack-plugin": "^13.0.0",
     "google-protobuf": "~3.21.4",
     "html-webpack-plugin": "^5.6.3",
     "webpack": "~5.82.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "wgpu-matrix": "^3.4.0"
   }
 }
