--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "grpc-game-client",
+  "name": "game-client",
   "version": "0.1.0",
-  "description": "gRPC Game Client",
+  "description": "Game Client",
   "devDependencies": {
     "@webgpu/types": "^0.1.64",
     "copy-webpack-plugin": "^13.0.0",
